updated js folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>takehome</title>
+    <title>in class - 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -58,16 +58,6 @@
         </div>
       </div>
     </div>
-    <script>
-      function toggleImage(imageId) {
-        var image = document.getElementById(imageId);
-        image.style.display = "block";
-      }
-
-      function hideImage(imageId) {
-        var image = document.getElementById(imageId);
-        image.style.display = "none";
-      }
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
